update title link colors

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,3 +76,8 @@ $size-1: 2.8rem;
 .content.is-medium {
   font-size: 1.125rem;
 }
+
+.navbar-brand a,
+.navbar-brand a:hover {
+  color: #4a4a4a;
+}
