--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,12 +64,14 @@ $size-1: 2.8rem;
   font-weight: 500;
 }
 
-.medium-post-image .gatsby-image-wrapper {
+.medium-post-image,
+.is-gi-medium .gatsby-image-wrapper {
   width: 50vw;
   min-width: 30vw;
 }
 
-.small-post-image .gatsby-image-wrapper {
+.small-post-image,
+.is-gi-small .gatsby-image-wrapper {
   width: 40vw;
   min-width: 30vw;
 }
