--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,19 @@ $size-1: 2.8rem;
     border-radius: 10px;
   }
 }
+
+.legend {
+  text-align: left;
+  line-height: 18px;
+  color: #555;
+  background-color: #ffffff;
+  padding: 10px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
