--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,6 +68,10 @@ $size-1: 2.8rem;
   background-color: #d9ecfb;
 }
 
+.content li {
+  margin-bottom: 1rem;
+}
+
 .leaflet-control-zoom a {
   text-decoration: none;
   font-weight: normal;
