--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,6 +144,10 @@ $size-1: 2.8rem;
 }
 
 @include mobile {
+  .imageFull {
+      border-radius: 10px;
+    }
+    
   .imageLeft {
     width: 100%;
     margin: 0;
