--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,6 +150,53 @@ $size-1: 2.8rem;
   width: 100%;
 }
 
+.vidcontainer169 {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+.vidcontainer43 {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 75%; /* 4:3 Aspect Ratio */
+}
+
+.vidcontainer32 {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 66.66%;
+    /* 3:2 Aspect Ratio */
+}
+
+.vidcontainer85 {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 62.5%; /* 8:5 Aspect Ratio */
+}
+
+.vidcontainer11 {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 100%;
+  /* 1:1 Aspect Ratio */
+}
+
+.responsive-vid-full {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @include mobile {
   .imageFull {
       border-radius: 10px;
