--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -107,6 +107,8 @@ section.post h2.title {
   font-size: 2.2rem;
 }
 
+section.post .tags {margin-top:2rem;}
+
 section.footer {
   text-align: center;
   margin-bottom: 3rem;
