try to fix postList component

--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -3,11 +3,13 @@ const { posts, gridTitle } = Astro.props;
 import PostPreview from './PostPreview.astro';
 ---
 
-<section class="tag-post-list content-padding">
-  <h2>{gridTitle}</h2>
-  {
-    posts.map(post => (
-      <PostPreview url={'/posts/' + post.slug} data={post.data} />
-    ))
-  }
+<section class="tag-post-list">
+  <h2 class="content-padding">{gridTitle}</h2>
+  <div class="content-padding">
+    {
+      posts.map(post => (
+        <PostPreview url={'/posts/' + post.slug} data={post.data} />
+      ))
+    }
+  </div>
 </section>
