update post page title

--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -22,6 +22,6 @@ const pageTitle = 'Hello Stu | Posts';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <PostGrid posts={posts} gridTitle={pageTitle} />
+  <PostGrid posts={posts} gridTitle="All Posts" />
   <Pagination pageData={page} />
 </BaseLayout>
