--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Selfie from '/src/content/post_images/jcc-selfie.jpg';
               href="/tags/tech">amatuer web developer</a
             >, <a href="/tags/running">keen runner</a>, <a href="/tags/parkrun"
               >regular parkrun volunteer</a
-            > and excotic disco dancer!
+            > and exotic disco dancer!
           </p>
           <p>
             <strong>
