--- a/src/styles/component-styles/header.css
+++ b/src/styles/component-styles/header.css
@@ -142,7 +142,9 @@ nav ul li {
  nav ul li:first-of-type {
   border: none;
  }
+
+ h1.site-title {
+   font-size: 3.5rem;
+ }
 }
 
-h1.site-title {
-  font-size: 3.5rem;}
