--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -99,7 +99,7 @@ section.tag-post-list article {
   margin-bottom: 2rem; 
   padding-top: 1rem; 
   padding-bottom:1rem; 
-  border-left: 3px dashed #000000; 
+  border: 1px solid #000000; 
   padding-left: 1rem; 
   padding-right: 1rem;}
 
