--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = 'Hello Stu | About Me';
 import { Image } from 'astro:assets';
-import ProfilePic from '/src/content/page_images/stuart-mackenzie.jpg';
+import NotFound from '/src/content/page_images/not-the-droids.jpg';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -10,9 +10,9 @@ import ProfilePic from '/src/content/page_images/stuart-mackenzie.jpg';
     <h2>404 | Sorry that page doesn't exist!</h2>
     <p>
       <Image
-        src={ProfilePic}
-        alt="Stuart Mackenzie profile picture"
-        class="imageLeft"
+        src={NotFound}
+        alt="these are not the droids you are looking for meme"
+        class="imageFull"
       />
       Uh-oh. Something has gone wrong. Return to the homepage and take another look.
     </p>
