tweak and update content on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,8 +15,8 @@ import ProfilePic from '/src/content/page_images/stuart-mackenzie.jpg';
         class="imageRight"
       />
       I live in <a href="https://www.visit-dorset.com/">Dorset</a> along with my
-      wife Chloe and daughter Robyn. I spend much of my time working out of London
-      transforming public services as a Senior Partner at{' '}
+      wife Chloe and daughter Robyn. I spend much of my time transforming public
+      services as a Senior Partner at{' '}
       <a href="https://tpximpact.com">TPXimpact</a> (previously known as{' '}
       <a href="https://wearefuturegov.com">FutureGov</a>).
     </p>
@@ -43,10 +43,10 @@ import ProfilePic from '/src/content/page_images/stuart-mackenzie.jpg';
     </p>
     <p>
       For those interested in technology the site in it's current form has been
-      built using <a href="https://www.gatsbyjs.org/">Gatsby</a> which is currently
-      my favourite static site generator. I use{' '}
-      <a href="https://firebase.google.com/">Firebase</a> for hosting the static
-      files. All of the code and content is maintained in{' '}
+      built using <a href="https://astro.build/">Astro</a> which is currently my
+      favourite static site generator. I use <a
+        href="https://firebase.google.com/">Firebase</a
+      > for hosting the static files. All of the code and content is maintained in
       <a href="https://github.com/d1sc0/hellostu.xyz">Github</a>.
     </p>
   </section>
