--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,44 +1,15 @@
 ---
-import { SEO } from 'astro-seo';
+import HeadSEO from '../components/HeadSEO.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '@fontsource/gochi-hand';
 import '@fontsource/poppins';
 import '../styles/global.css';
-const { frontmatter } = Astro.props;
-const { pageTitle } = Astro.props;
-const siteInfo = {
-  description:
-    'Hello Stu is the personal website and blog of Stuart Mackenzie. Stuart works hard to improve and transform public services as a Senior Partner at TPXimpact. Outside of work he is a photographer, amatuer web developer, runner, parkrun enthsiast and excotic disco dancer! ',
-  imageUrl: '/social_images/hellostu-social.jpg',
-};
+const { frontmatter, pageTitle } = Astro.props;
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <SEO
-      title={pageTitle != undefined
-        ? pageTitle
-        : 'Hello Stu | ' + frontmatter.title}
-      description={frontmatter !== undefined
-        ? frontmatter.description
-        : siteInfo.description}
-      openGraph={{
-        basic: {
-          title: pageTitle != undefined ? pageTitle : frontmatter.title,
-          type: frontmatter !== undefined ? 'article' : 'website',
-          image:
-            frontmatter !== undefined
-              ? frontmatter.socialImage
-              : siteInfo.imageUrl,
-        },
-      }}
-    />
-  </head>
+  <HeadSEO frontmatter={frontmatter} pageTitle={pageTitle} />
   <body>
     <div class="container">
       <Header />
