--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,11 +54,8 @@ body {
 }
 
 
-/* general page layout styles
---------------------------------------------------------------------------------------- */
-.container {
-  padding: .5rem
-}
+/* general page layout styles */
+
 
 main, header, footer {
   max-width: 72rem;
@@ -81,6 +78,69 @@ footer {
   margin-bottom: .5rem;
 }
 
+.container {
+  padding: .5rem
+}
+
+.content-padding {
+  padding-left: 1.1rem;
+  padding-right: 1.1rem;
+}
+
+h2 {
+  margin-bottom: .5rem
+}
+
+p.toplink {
+  text-align: center;
+}
+
+strong {
+  font-weight: 900;
+}
+
+a {
+  color: #d33643ff;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #049bd6;
+  text-decoration: underline;
+}
+
+p {
+  margin: 0 0 0.8rem 0;
+}
+
+.post p {
+  margin: 1.2rem 0 1.2rem 0;
+  line-height: 1.5em;
+}
+
+blockquote {
+  background-color: #fafa00ff;
+  margin: 0;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-left: 8px solid black;
+}
+
+ul {
+  margin-left: 1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem
+}
+
+li {
+  margin-bottom: 0.3rem;
+}
+
+/* section layout styles */
+
+section {
+  margin-top: 2rem;
+}
 
 section.latest {
   background-color: #fafa00ff;
@@ -89,12 +149,15 @@ section.latest {
 }
 
 section.home {margin-bottom: 5rem; margin-top: 3rem;}
+
 section.home img, section.post.img{
   width: 100%;
   height: auto;
 }
+
 section.about {margin-bottom: 6rem;
   margin-top: 3rem;}
+
 section.tag-post-list article {
   margin-bottom: 2rem; 
   padding-top: 1rem; 
@@ -109,6 +172,7 @@ section.tag-post-list article:nth-child(odd) {
 }
 
 section.post {margin-bottom: 6rem;}
+
 section.post h2.title {
   font-size: 2.2rem;
 }
@@ -123,6 +187,7 @@ section.footer {
 section.footer .social-icon {font-size: 1.5rem; padding-left: .8rem; padding-right: .8rem}
 
 section.social-links {margin-bottom: 4rem;}
+
 section.social-links h2 {
     font-family: 'Gochi Hand', cursive;
     font-size: 3rem;
@@ -131,24 +196,127 @@ section.social-links h2 {
 
 section.social-links p, section.social-links li {font-size: 1.4rem;}
 
-strong {
-  font-weight: 900;
+/* grids and more section styles */
+
+section.postgrid .grid,
+section.audiogrid .grid,
+section.latest .grid {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-gap: 3rem;
+  margin-bottom: 3rem;
 }
 
-section {
-  margin-top: 2rem;
+section.latest .morelink {
+  text-align: right;
+  margin: 0;
 }
 
-h2 {
-  margin-bottom: .5rem
+section.home .welcome-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "welcome"
+    "profile";
+  grid-gap: 0rem;
+  background-color: #ffffff;
 }
 
-.content-padding {
-  padding-left: 1.1rem;
-  padding-right: 1.1rem;
+section.home .welcome-grid .profile-pic {
+  grid-area: profile;
 }
 
-p.toplink {text-align: center;}
+section.home .welcome-grid .welcome-text {
+  grid-area: welcome;
+}
+
+section.home .welcome-grid p {
+  font-size: 1.1rem;
+}
+
+section.home .profile-pic {
+  border: 1px solid #000000;
+  padding: 1rem;
+  box-shadow: 5px 8px;
+  border-radius: .3rem;
+  background-color: #ffffff;
+  height: min-content;
+}
+
+section.home .profile-pic img {
+  border: 1px solid #000000;
+  min-width: 280px;
+}
+
+section.home .profile-pic figcaption {
+  font-family: 'Gochi Hand', cursive;
+  font-size: 2rem;
+  line-height: 3.5rem;
+  text-align: center;
+}
+
+section.audiogrid .subscription {
+  margin-bottom: 3rem;
+}
+
+section article {
+  border: 1px solid #000000;
+  padding: 1rem;
+  box-shadow: 5px 8px;
+  border-radius: .3rem;
+  background-color: #ffffff;
+}
+
+section article img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border: 1px solid #000000;
+}
+
+section.postgrid .grid article:nth-child(1) {
+  background-color: #fafa00ff;
+}
+
+section.postgrid .grid article:nth-child(2) {
+  background-color: #ffffff;
+}
+
+section.postgrid .grid article:nth-child(3) {
+  background-color: #fafa00ff;
+}
+
+section.postgrid .grid article:nth-child(4) {
+  background-color: #ffffff;
+}
+
+section.postgrid .grid article:nth-child(5) {
+  background-color: #70d6ffff;
+}
+
+section.postgrid .grid article:nth-child(6) {
+  background-color: #70d6ffff;
+}
+
+section.postgrid .grid article:nth-child(7) {
+  background-color: #fafa00ff;
+}
+
+section.postgrid .grid article:nth-child(8) {
+  background-color: #fafa00ff;
+}
+
+section.postgrid .grid article:nth-child(9) {
+  background-color: #ffffff;
+}
+
+section.pagination {
+  padding-bottom: 2rem;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
 
 /*  Tag styling
 --------------------------------------------------------------------------------------- */
@@ -185,42 +353,110 @@ p.toplink {text-align: center;}
   color: #fafa00ff;
 }
 
-/*  default paragraph styling
---------------------------------------------------------------------------------------- */
-p {
-  margin: 0 0 0.8rem 0;
+/*  Head and main nav styling */
+
+img.site-title {
+  width: 85%;
+  max-width: 350px;
+  height: auto;
 }
 
-.post p {margin: 1.2rem 0 1.2rem 0;
-  line-height: 1.5em;}
-
-blockquote {
-  background-color: #fafa00ff;
-  margin: 0;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  border-left: 8px solid black;
+.site-title a,
+.site-title a:hover,
+.links-list a {
+  text-decoration: none;
+  color: #000000;
 }
 
-ul {
-  margin-left: 1.5rem;
+.links-list a:hover {
+  text-decoration: none;
+}
+
+nav.main-nav {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    'brand burger'
+    'links links';
+  padding: 0.5rem;
+  min-height: 2rem;
+  background-color: transparent;
+  align-items: center;
+}
+
+nav.main-nav .brand {
+  grid-area: brand;
+}
+
+nav.main-nav .burger {
+  grid-area: burger;
+  text-align: right;
+  cursor: pointer;
+}
+
+nav.main-nav .links-list {
+  grid-area: links;
+  display: none;
+}
+
+/*  is-active toggled by JS when button pressed to show the links hidden above */
+.is-active {
+  display: initial !important;
+}
+
+nav ul {
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+nav ul li {
+  font-size: 1.1rem;
+  text-align: left;
+  margin-left: 1rem;
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem
 }
 
-li {margin-bottom: 0.3rem;}
-
-/*  link styling
---------------------------------------------------------------------------------------- */
-a {
-  color: #d33643ff;
-  text-decoration: underline;
+/*  hamburger styles and css anim */
+.burger-button {
+  background-color: transparent;
+  border: none;
 }
 
-a:hover {
-  color: #049bd6;
-  text-decoration: underline;
+.line {
+  fill: none;
+  stroke: #2b2d44;
+  stroke-width: 6;
+  transition:
+    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.line1,
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+
+.opened .line1,
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+
+/*  Media styling */
 
 .audioplayer {
   margin-bottom: 0rem;
@@ -235,10 +471,6 @@ a:hover {
   padding-top: 56.25%;
   /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
-
-/*  Media Styling
---------------------------------------------------------------------------------------- */
-
 
 .vidcontainer43 {
   position: relative;
@@ -305,24 +537,28 @@ a:hover {
   border-radius: .3rem;
 }
 
-/* IMPORTANT: media query - switches on grid layout if page width is wider than 768px
---------------------------------------------------------------------------------------- */
+/*----------------------------------------------------------------------------------------------*/
+/* IMPORTANT: DESKTOP media query - switches on grid layout if page width is wider than 768px   */
+/*--------------------------------------------------------------------------------------------- */
 
 @media (min-width: 768px) and (orientation: landscape) {
-  /*  IMPORTANT: min-width:60em rule will stop the container from resizing  
---------------------------------------------------------------------------------------- */
-.content-padding {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
 
-    .imageFull, section.post img[src*="FULL"] {
+     /* desktop layout styles */
+
+      .content-padding {
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
+
+    /* desktop media styles */
+
+     .imageFull, section.post img[src*="FULL"] {
       width: 100%;
       height: auto;
       margin-bottom: 0rem;
       border-radius: .3rem;
     }
-  
+
     .imageLeft, section.post img[src*="LEFT"] {
       width: 50%;
       height:auto;
@@ -343,6 +579,77 @@ a:hover {
       float: right !important;
     }
 
+    /* desktop nav styles */
+
+    nav.main-nav {
+      display: grid;
+      grid-template-columns: 2fr 3fr;
+      grid-template-areas: 'brand links';
+      background-color: transparent;
+      align-items: center;
+    }
   
-  }
+    nav.main-nav .brand {
+      grid-area: brand;
+    }
+  
+    nav.main-nav .burger {
+      display: none;
+    }
+  
+    nav.main-nav .links-list {
+      grid-area: links;
+      display: initial !important;
+    }
+  
+    nav ul {
+      margin-left: 10px;
+      text-align: right;
+    }
+  
+    nav ul li {
+      display: inline;
+      border: none;
+      padding-right: 29px;
+    }
+  
+    nav ul li:first-of-type {
+      border: none;
+    }
+  
+    img.site-title {
+      width: 350px;
+      height: 102px;
+    }
+    
+    /* desktop grid styles */
+
+        section.postgrid .grid,
+        section.audiogrid .grid {
+          display: grid;
+          grid-template-rows: auto;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-gap: 3rem;
+        }
+    
+        section.latest .grid {
+          display: grid;
+          grid-template-rows: 1fr;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-gap: 3rem;
+        }
+    
+        section.home .welcome-grid {
+          display: grid;
+          grid-template-columns: 2fr 4fr;
+          grid-template-areas: "profile welcome";
+          grid-gap: 2rem;
+        }
+    
+        section.home .welcome-grid p {
+          font-size: 1.6rem;
+        }
+  
+}
+  
 
