--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import HeadSEO from '../components/HeadSEO.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import PageScripts from '../components/PageScripts.astro';
 import '@fontsource/gochi-hand';
 import '@fontsource/poppins';
 import '../styles/global.css';
@@ -21,10 +22,6 @@ const { frontmatter, pageTitle } = Astro.props;
       </main>
       <Footer />
     </div>
-    <script>
-      import '../scripts/menu.js';
-    </script>
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <PageScripts />
   </body>
 </html>
