--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,7 @@ import Logo from '/src/content/page_images/hello-stu-title.png';
       <a
         role="button"
         class="burger-button"
+        aria-label="hamburger button"
         aria-expanded="false"
         data-target="menu-links"
       >
