--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,11 @@
 ---
 import { Image } from 'astro:assets';
-import Logo from '/src/content/page_images/hello-stu-title.png';
 ---
 
 <header id="top">
   <nav class="main-nav" role="navigation">
     <div class="brand">
-      <a href="/"
-        ><Image src={Logo} alt="Hello Stu logo" class="site-title" /></a
-      >
+      <h1 class="site-title">Hello Stu</h1>
     </div>
 
     <div class="burger">
