--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 <header id="top">
   <nav class="main-nav" role="navigation">
     <div class="brand">
-      <h1 class="site-title">Hello Stu</h1>
+      <h1 class="site-title"><a href="/">Hello Stu</a></h1>
     </div>
 
     <div class="burger">
