--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -20,7 +20,7 @@ const { page } = Astro.props;
 const posts = page.data;
 const pageTitle = 'All Posts';
 const pageMeta = {
-  title: 'Hello Stu | Posts',
+  title: 'Hello Stu | ' + pageTitle,
   description: 'All of my blog posts and audio notes in one place',
   imageUrl: '/social_images/hellostu-social.jpg',
 };
