--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -32,6 +32,7 @@ import Fonts from '../components/Fonts.astro';
             ? frontmatter.description
             : pageMeta.description,
       },
+      article: { authors: ['Stuart Mackenzie'] },
     }}
   />
 </head>
