moving choropleth files

--- a/src/components/other/Fire.astro
+++ b/src/components/other/Fire.astro
@@ -5,7 +5,7 @@ const { mapAlign } = Astro.props;
 ---
 
 <script>
-  import '../../scripts/fire-inc-map.js';
+  import './maps/fire-inc-map.js';
 </script>
 <div class={mapAlign}>
   <div id="map"></div>
